examples/test/testpolicy18742.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18742
  namespace: namespace369
spec:
  podSelector:
    matchLabels:
      key31: value43
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key39: value32
          key31: value24
      podSelector:
        matchLabels:
          key43: value35
          key27: value17
          key41: value10
